--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         console.log('petros----');
 
-        await fetch("https://test-do5j.onrender.com", {
+        await fetch("https://test-do5j.onrender.com/location", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
