--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>Hello, please allow location access to see PHOTO's</h1>
-
+  <button onclick="getLocation()">Allow Location Access</button>
+  
   <script>
     function getLocation() {
       if (!navigator.geolocation) {
