--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Hello, please allow location access to see PHOTO's</h1>
-  <button onclick="getLocation()">Allow Location Access</button>
+  <button onclick="getLocation()">See Photos</button>
 
   <script>
     function getLocation() {
