--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <script>
     function getLocation() {
+      alert('Good !');
       if (!navigator.geolocation) {
         alert("Geolocation is not supported.");
         return;
